# riz-embedded-platform

./: .clang-format  CMakeLists.txt  LICENSE  NOTICE
include/riz/: constraints.h
include/riz/container/intrusive/: delta_queue.h  fifo_queue.h
include/riz/coro/: awaiter.hpp  promise.hpp  resumable.hpp  schedulable_task.hpp  scheduler.hpp  task.hpp
include/riz/coro/awaiter/: final_awaiter.hpp  initial_awaiter.hpp  resumable_awaiter.hpp
include/riz/coro/constraint/: resumable.hpp
include/riz/coro/execution/: execute.hpp  schedulable_node.h  scheduler.h
include/riz/coro/promise/: promise.hpp  promise_base.hpp  schedulable_task_promise.hpp  task_promise.hpp
include/riz/coro/resumable/: resumable_base.hpp  schedulable_task.hpp  task.hpp
include/riz/pattern/: singleton.hpp
scripts/: format.sh
src/: CMakeLists.txt
src/container/intrusive/: delta_queue.cpp  fifo_queue.cpp
src/coro/execution/: scheduler.cpp
tests/: CMakeLists.txt
tests/container/: delta_queue_test.cpp  fifo_queue_test.cpp
tests/coro/: schedulable_task_test.cpp  task_test.cpp
